# Agentic-System

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
agents/: client.py  graph.py
agents/mcp/: config.py
agents/mcp_servers/: mcp_config.json
agents/prompts/: default_prompt.md  prompt_manager.py  rag_analysis_prompt.md  system_prompt.md
course_syllabus/: syllabus.json
src/: client.py  graph.py
src/a2a_services/: a2a_client.py  test_client.py
src/agenda_agent/: graph.py  state.py
src/documents_agent/: graph.py  state.py
src/host_agent/: api.py  host_agent.py  models.py  service.py
src/mcp_servers/: mcp_config.json
src/multi_agent/: supervisor.py
src/prompts/: agenda_agent.md  copywriter.md  documents_agent.md  host_supervisor_prompt.md  intent_classifier_prompt.md  notes_planner_prompt.md  notes_single_agent_prompt.md  notes_writer_prompt.md  orchestrator.md  planner_agent.md  prompt_manager.py  rag_analysis_prompt.md  research_evaluator_prompt.md  research_retriever_prompt.md  research_synthesizer_prompt.md  research_web_searcher_prompt.md  researcher.md  researcher_single_agent_prompt.md  scheduler_prompt.md  study_plan_agent.md  supervisor.md  supervisor_agent.md  syllabus_agent.md  syllabus_loader_agent.md  system_prompt.md  task_planner_prompt.md  url_agent.md
src/scholar_agent/: graph.py  state.py  tools.py
src/study_plan_agent/: graph.py  state.py  tools.py
src/ui/: console.py  streamlit_app.py
src/utils/: llm_factory.py  mcp_client.py  prompt_manager.py  retryable_invoke.py  tool_formatter.py  url_cache.py
(+67 files in other folders)
