[project]
name = "agentic-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=1.0.3",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "htbuilder>=0.9.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.0",
    "langchain-tavily>=0.2.18",
    "langchain-unstructured[local]>=1.0.1",
    "langgraph>=1.1.8",
    "markdown>=3.10.2",
    "pydantic>=2.13.2",
    "reportlab>=4.5.0",
    "scrapling[ai]>=0.4.8",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "unstructured-inference>=1.6.6",
    "unstructured[all-docs]>=0.22.21",
    "uvicorn>=0.44.0",
    "weasyprint>=68.1",
]
